# c-pintos

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/knowledge/: pintos-reference.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature-생성.md  task-생성.md  버그-발생.md  이슈-생성.md  일정-생성.md  질문-생성.md
.github/workflows/: claude-code-review.yml  claude.yml
krsy0411/: mlfqs.c
pintos/: .gitconfig
pintos/.java/.userPrefs/: prefs.xml
pintos/.java/.userPrefs/jetbrains/: prefs.xml
pintos/.java/.userPrefs/jetbrains/cl/csat/user/created/: prefs.xml
pintos/.java/.userPrefs/jetbrains/rd/: prefs.xml
pintos/devices/: timer.c
pintos/filesys/: file.c
pintos/include/devices/: timer.h
pintos/include/filesys/: file.h
pintos/include/threads/: interrupt.h  synch.h  thread.h
pintos/include/userprog/: process.h
pintos/include/vm/: anon.h  file.h  vm.h
pintos/lib/: stdio.c  string.c
pintos/lib/kernel/: console.c
pintos/lib/user/: syscall.c
pintos/tests/: lib.c
pintos/threads/: init.c  mmu.c  synch.c  thread.c
pintos/userprog/: .test_status  exception.c  process.c  syscall.c
pintos/vm/: anon.c  file.c  uninit.c  vm.c
