cmake_minimum_required(VERSION 4.0)
project(c_pintos C)

set(CMAKE_C_STANDARD 11)

include_directories(pintos/include)
include_directories(pintos/include/devices)
include_directories(pintos/include/filesys)
include_directories(pintos/include/lib)
include_directories(pintos/include/lib/kernel)
include_directories(pintos/include/lib/user)
include_directories(pintos/include/threads)
include_directories(pintos/include/userprog)
include_directories(pintos/include/vm)
include_directories(pintos/tests)
include_directories(pintos/tests/filesys)
include_directories(pintos/tests/filesys/base)
include_directories(pintos/tests/filesys/extended)
include_directories(pintos/tests/threads)
include_directories(pintos/tests/userprog)
include_directories(pintos/tests/vm)

add_executable(c_pintos
        pintos/devices/disk.c
        pintos/devices/input.c
        pintos/devices/intq.c
        pintos/devices/kbd.c
        pintos/devices/serial.c
        pintos/devices/timer.c
        pintos/devices/vga.c
        pintos/filesys/directory.c
        pintos/filesys/fat.c
        pintos/filesys/file.c
        pintos/filesys/filesys.c
        pintos/filesys/free-map.c
        pintos/filesys/fsutil.c
        pintos/filesys/inode.c
        pintos/filesys/page_cache.c
        pintos/include/devices/disk.h
        pintos/include/devices/input.h
        pintos/include/devices/intq.h
        pintos/include/devices/kbd.h
        pintos/include/devices/serial.h
        pintos/include/devices/timer.h
        pintos/include/devices/vga.h
        pintos/include/filesys/directory.h
        pintos/include/filesys/fat.h
        pintos/include/filesys/file.h
        pintos/include/filesys/filesys.h
        pintos/include/filesys/free-map.h
        pintos/include/filesys/fsutil.h
        pintos/include/filesys/inode.h
        pintos/include/filesys/off_t.h
        pintos/include/filesys/page_cache.h
        pintos/include/lib/kernel/bitmap.h
        pintos/include/lib/kernel/console.h
        pintos/include/lib/kernel/hash.h
        pintos/include/lib/kernel/list.h
        pintos/include/lib/kernel/stdio.h
        pintos/include/lib/user/stdio.h
        pintos/include/lib/user/syscall.h
        pintos/include/lib/ctype.h
        pintos/include/lib/debug.h
        pintos/include/lib/inttypes.h
        pintos/include/lib/limits.h
        pintos/include/lib/random.h
        pintos/include/lib/round.h
        pintos/include/lib/stdarg.h
        pintos/include/lib/stdbool.h
        pintos/include/lib/stddef.h
        pintos/include/lib/stdint.h
        pintos/include/lib/stdio.h
        pintos/include/lib/stdlib.h
        pintos/include/lib/string.h
        pintos/include/lib/syscall-nr.h
        pintos/include/threads/flags.h
        pintos/include/threads/init.h
        pintos/include/threads/interrupt.h
        pintos/include/threads/intr-stubs.h
        pintos/include/threads/io.h
        pintos/include/threads/loader.h
        pintos/include/threads/malloc.h
        pintos/include/threads/mmu.h
        pintos/include/threads/palloc.h
        pintos/include/threads/pte.h
        pintos/include/threads/synch.h
        pintos/include/threads/thread.h
        pintos/include/threads/vaddr.h
        pintos/include/userprog/exception.h
        pintos/include/userprog/gdt.h
        pintos/include/userprog/process.h
        pintos/include/userprog/syscall.h
        pintos/include/userprog/tss.h
        pintos/include/vm/anon.h
        pintos/include/vm/file.h
        pintos/include/vm/inspect.h
        pintos/include/vm/uninit.h
        pintos/include/vm/vm.h
        pintos/include/intrinsic.h
        pintos/lib/kernel/bitmap.c
        pintos/lib/kernel/console.c
        pintos/lib/kernel/debug.c
        pintos/lib/kernel/hash.c
        pintos/lib/kernel/list.c
        pintos/lib/user/console.c
        pintos/lib/user/debug.c
        pintos/lib/user/entry.c
        pintos/lib/user/syscall.c
        pintos/lib/arithmetic.c
        pintos/lib/debug.c
        pintos/lib/random.c
        pintos/lib/stdio.c
        pintos/lib/stdlib.c
        pintos/lib/string.c
        pintos/tests/filesys/base/child-syn-read.c
        pintos/tests/filesys/base/child-syn-wrt.c
        pintos/tests/filesys/base/lg-create.c
        pintos/tests/filesys/base/lg-full.c
        pintos/tests/filesys/base/lg-random.c
        pintos/tests/filesys/base/lg-seq-block.c
        pintos/tests/filesys/base/lg-seq-random.c
        pintos/tests/filesys/base/sm-create.c
        pintos/tests/filesys/base/sm-full.c
        pintos/tests/filesys/base/sm-random.c
        pintos/tests/filesys/base/sm-seq-block.c
        pintos/tests/filesys/base/sm-seq-random.c
        pintos/tests/filesys/base/syn-read.c
        pintos/tests/filesys/base/syn-read.h
        pintos/tests/filesys/base/syn-remove.c
        pintos/tests/filesys/base/syn-write.c
        pintos/tests/filesys/base/syn-write.h
        pintos/tests/filesys/buffer-cache/bc-easy.c
        pintos/tests/filesys/extended/child-syn-rw.c
        pintos/tests/filesys/extended/dir-empty-name.c
        pintos/tests/filesys/extended/dir-mk-tree.c
        pintos/tests/filesys/extended/dir-mkdir.c
        pintos/tests/filesys/extended/dir-open.c
        pintos/tests/filesys/extended/dir-over-file.c
        pintos/tests/filesys/extended/dir-rm-cwd.c
        pintos/tests/filesys/extended/dir-rm-parent.c
        pintos/tests/filesys/extended/dir-rm-root.c
        pintos/tests/filesys/extended/dir-rm-tree.c
        pintos/tests/filesys/extended/dir-rmdir.c
        pintos/tests/filesys/extended/dir-under-file.c
        pintos/tests/filesys/extended/dir-vine.c
        pintos/tests/filesys/extended/grow-create.c
        pintos/tests/filesys/extended/grow-dir-lg.c
        pintos/tests/filesys/extended/grow-file-size.c
        pintos/tests/filesys/extended/grow-root-lg.c
        pintos/tests/filesys/extended/grow-root-sm.c
        pintos/tests/filesys/extended/grow-seq-lg.c
        pintos/tests/filesys/extended/grow-seq-sm.c
        pintos/tests/filesys/extended/grow-sparse.c
        pintos/tests/filesys/extended/grow-tell.c
        pintos/tests/filesys/extended/grow-two-files.c
        pintos/tests/filesys/extended/mk-tree.c
        pintos/tests/filesys/extended/mk-tree.h
        pintos/tests/filesys/extended/symlink-dir.c
        pintos/tests/filesys/extended/symlink-file.c
        pintos/tests/filesys/extended/symlink-link.c
        pintos/tests/filesys/extended/syn-rw.c
        pintos/tests/filesys/extended/syn-rw.h
        pintos/tests/filesys/extended/tar.c
        pintos/tests/filesys/mount/mount-easy.c
        pintos/tests/filesys/seq-test.c
        pintos/tests/filesys/seq-test.h
        pintos/tests/internal/list.c
        pintos/tests/internal/stdio.c
        pintos/tests/internal/stdlib.c
        pintos/tests/threads/mlfqs/mlfqs-block.c
        pintos/tests/threads/mlfqs/mlfqs-fair.c
        pintos/tests/threads/mlfqs/mlfqs-load-1.c
        pintos/tests/threads/mlfqs/mlfqs-load-60.c
        pintos/tests/threads/mlfqs/mlfqs-load-avg.c
        pintos/tests/threads/mlfqs/mlfqs-recent-1.c
        pintos/tests/threads/alarm-negative.c
        pintos/tests/threads/alarm-priority.c
        pintos/tests/threads/alarm-simultaneous.c
        pintos/tests/threads/alarm-wait.c
        pintos/tests/threads/alarm-zero.c
        pintos/tests/threads/priority-change.c
        pintos/tests/threads/priority-condvar.c
        pintos/tests/threads/priority-donate-chain.c
        pintos/tests/threads/priority-donate-lower.c
        pintos/tests/threads/priority-donate-multiple.c
        pintos/tests/threads/priority-donate-multiple2.c
        pintos/tests/threads/priority-donate-nest.c
        pintos/tests/threads/priority-donate-one.c
        pintos/tests/threads/priority-donate-sema.c
        pintos/tests/threads/priority-fifo.c
        pintos/tests/threads/priority-preempt.c
        pintos/tests/threads/priority-sema.c
        pintos/tests/threads/tests.c
        pintos/tests/threads/tests.h
        pintos/tests/userprog/dup2/dup2-complex.c
        pintos/tests/userprog/dup2/dup2-simple.c
        pintos/tests/userprog/no-vm/multi-oom.c
        pintos/tests/userprog/args.c
        pintos/tests/userprog/bad-jump.c
        pintos/tests/userprog/bad-jump2.c
        pintos/tests/userprog/bad-read.c
        pintos/tests/userprog/bad-read2.c
        pintos/tests/userprog/bad-write.c
        pintos/tests/userprog/bad-write2.c
        pintos/tests/userprog/boundary.c
        pintos/tests/userprog/boundary.h
        pintos/tests/userprog/child-bad.c
        pintos/tests/userprog/child-close.c
        pintos/tests/userprog/child-read.c
        pintos/tests/userprog/child-rox.c
        pintos/tests/userprog/child-simple.c
        pintos/tests/userprog/close-bad-fd.c
        pintos/tests/userprog/close-normal.c
        pintos/tests/userprog/close-twice.c
        pintos/tests/userprog/create-bad-ptr.c
        pintos/tests/userprog/create-bound.c
        pintos/tests/userprog/create-empty.c
        pintos/tests/userprog/create-exists.c
        pintos/tests/userprog/create-long.c
        pintos/tests/userprog/create-normal.c
        pintos/tests/userprog/create-null.c
        pintos/tests/userprog/exec-arg.c
        pintos/tests/userprog/exec-bad-ptr.c
        pintos/tests/userprog/exec-boundary.c
        pintos/tests/userprog/exec-missing.c
        pintos/tests/userprog/exec-once.c
        pintos/tests/userprog/exec-read.c
        pintos/tests/userprog/exit.c
        pintos/tests/userprog/fork-boundary.c
        pintos/tests/userprog/fork-close.c
        pintos/tests/userprog/fork-multiple.c
        pintos/tests/userprog/fork-once.c
        pintos/tests/userprog/fork-read.c
        pintos/tests/userprog/fork-recursive.c
        pintos/tests/userprog/halt.c
        pintos/tests/userprog/multi-child-fd.c
        pintos/tests/userprog/multi-recurse.c
        pintos/tests/userprog/open-bad-ptr.c
        pintos/tests/userprog/open-boundary.c
        pintos/tests/userprog/open-empty.c
        pintos/tests/userprog/open-missing.c
        pintos/tests/userprog/open-normal.c
        pintos/tests/userprog/open-null.c
        pintos/tests/userprog/open-twice.c
        pintos/tests/userprog/read-bad-fd.c
        pintos/tests/userprog/read-bad-ptr.c
        pintos/tests/userprog/read-boundary.c
        pintos/tests/userprog/read-normal.c
        pintos/tests/userprog/read-stdout.c
        pintos/tests/userprog/read-zero.c
        pintos/tests/userprog/rox-child.c
        pintos/tests/userprog/rox-multichild.c
        pintos/tests/userprog/rox-simple.c
        pintos/tests/userprog/wait-bad-pid.c
        pintos/tests/userprog/wait-killed.c
        pintos/tests/userprog/wait-simple.c
        pintos/tests/userprog/wait-twice.c
        pintos/tests/userprog/write-bad-fd.c
        pintos/tests/userprog/write-bad-ptr.c
        pintos/tests/userprog/write-boundary.c
        pintos/tests/userprog/write-normal.c
        pintos/tests/userprog/write-stdin.c
        pintos/tests/userprog/write-zero.c
        pintos/tests/vm/cow/cow-simple.c
        pintos/tests/vm/child-inherit.c
        pintos/tests/vm/child-linear.c
        pintos/tests/vm/child-mm-wrt.c
        pintos/tests/vm/child-qsort-mm.c
        pintos/tests/vm/child-qsort.c
        pintos/tests/vm/child-sort.c
        pintos/tests/vm/child-swap.c
        pintos/tests/vm/lazy-anon.c
        pintos/tests/vm/lazy-file.c
        pintos/tests/vm/mmap-bad-fd.c
        pintos/tests/vm/mmap-bad-fd2.c
        pintos/tests/vm/mmap-bad-fd3.c
        pintos/tests/vm/mmap-bad-off.c
        pintos/tests/vm/mmap-clean.c
        pintos/tests/vm/mmap-close.c
        pintos/tests/vm/mmap-exit.c
        pintos/tests/vm/mmap-inherit.c
        pintos/tests/vm/mmap-kernel.c
        pintos/tests/vm/mmap-misalign.c
        pintos/tests/vm/mmap-null.c
        pintos/tests/vm/mmap-off.c
        pintos/tests/vm/mmap-over-code.c
        pintos/tests/vm/mmap-over-data.c
        pintos/tests/vm/mmap-over-stk.c
        pintos/tests/vm/mmap-overlap.c
        pintos/tests/vm/mmap-read.c
        pintos/tests/vm/mmap-remove.c
        pintos/tests/vm/mmap-ro.c
        pintos/tests/vm/mmap-shuffle.c
        pintos/tests/vm/mmap-twice.c
        pintos/tests/vm/mmap-unmap.c
        pintos/tests/vm/mmap-write.c
        pintos/tests/vm/mmap-zero-len.c
        pintos/tests/vm/mmap-zero.c
        pintos/tests/vm/page-linear.c
        pintos/tests/vm/page-merge-mm.c
        pintos/tests/vm/page-merge-par.c
        pintos/tests/vm/page-merge-seq.c
        pintos/tests/vm/page-merge-stk.c
        pintos/tests/vm/page-parallel.c
        pintos/tests/vm/page-shuffle.c
        pintos/tests/vm/parallel-merge.c
        pintos/tests/vm/parallel-merge.h
        pintos/tests/vm/pt-bad-addr.c
        pintos/tests/vm/pt-bad-read.c
        pintos/tests/vm/pt-big-stk-obj.c
        pintos/tests/vm/pt-grow-bad.c
        pintos/tests/vm/pt-grow-stack.c
        pintos/tests/vm/pt-grow-stk-sc.c
        pintos/tests/vm/pt-write-code.c
        pintos/tests/vm/pt-write-code2.c
        pintos/tests/vm/qsort.c
        pintos/tests/vm/qsort.h
        pintos/tests/vm/swap-anon.c
        pintos/tests/vm/swap-file.c
        pintos/tests/vm/swap-fork.c
        pintos/tests/vm/swap-iter.c
        pintos/tests/arc4.c
        pintos/tests/arc4.h
        pintos/tests/cksum.c
        pintos/tests/cksum.h
        pintos/tests/lib.c
        pintos/tests/lib.h
        pintos/tests/main.c
        pintos/tests/main.h
        pintos/threads/init.c
        pintos/threads/interrupt.c
        pintos/threads/malloc.c
        pintos/threads/mmu.c
        pintos/threads/palloc.c
        pintos/threads/synch.c
        pintos/threads/thread.c
        pintos/userprog/exception.c
        pintos/userprog/gdt.c
        pintos/userprog/process.c
        pintos/userprog/syscall.c
        pintos/userprog/tss.c
        pintos/vm/anon.c
        pintos/vm/file.c
        pintos/vm/inspect.c
        pintos/vm/uninit.c
        pintos/vm/vm.c)
